90% of backend and API integration complete